fixed overflow on results page

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -116,6 +116,7 @@
     position: relative;
     background-color: white;
     /* color for results area */
+    overflow: auto;
 }
 
 .form-container {
